Fixed margin and gap

--- a/src/components/jobCard/jobCard.sass
+++ b/src/components/jobCard/jobCard.sass
@@ -149,7 +149,6 @@
             width: 24px
             height: 24px
             object-fit: contain
-            fill: #0071FE
 
     &__button-chat
         background-color: #EDF5FF
